--- a/core/pom.xml
+++ b/core/pom.xml
@@ -110,6 +110,13 @@
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.4</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.bidib.jbidib.org.qbang.rxtx</groupId>
+		    <artifactId>rxtxcomm</artifactId>
+		    <version>2.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
 		<dependency>
 		    <groupId>io.netty</groupId>
