--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.iottree</groupId>
 		<artifactId>iottree-parent</artifactId>
-		<version>0.93.9</version>
+		<version>0.94.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -116,6 +116,14 @@
 		    <artifactId>rxtxcomm</artifactId>
 		    <version>2.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
+		<dependency>
+		    <groupId>org.java-websocket</groupId>
+		    <artifactId>Java-WebSocket</artifactId>
+		    <version>1.5.2</version>
+		</dependency>
+
 
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
 		<dependency>
