--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>iottree-parent</artifactId>
     <groupId>org.iottree</groupId>
-    <version>0.94.0</version>
+    <version>0.94.1</version>
   </parent>
 
   <artifactId>iottree-server</artifactId>
@@ -191,6 +191,7 @@
 			                        <includes>
 			                            <include>data/dev_drv/</include>
 			                            <include>data/comp_lib/</include>
+			                            <include>data/demo/</include>
 			                        </includes>
 			                    </resource>
 			                </resources>
