--- a/driver-parent/driver-opc/pom.xml
+++ b/driver-parent/driver-opc/pom.xml
@@ -19,6 +19,12 @@
   </properties>
 
   <dependencies>
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.25</version>
+    <scope>compile</scope>
+  </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
