--- a/core/pom.xml
+++ b/core/pom.xml
@@ -135,6 +135,48 @@
 		    <version>1.5.2</version>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
+<dependency>
+    <groupId>org.apache.activemq</groupId>
+    <artifactId>activemq-all</artifactId>
+    <version>5.16.3</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-jaas -->
+<dependency>
+    <groupId>org.apache.activemq</groupId>
+    <artifactId>activemq-jaas</artifactId>
+    <version>5.16.3</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-mqtt -->
+<dependency>
+    <groupId>org.apache.activemq</groupId>
+    <artifactId>activemq-mqtt</artifactId>
+    <version>5.16.3</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.12.5</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.12.5</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-server</artifactId>
+    <version>9.4.43.v20210629</version>
+</dependency>
+
+
 
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
 		<dependency>
