--- a/driver-parent/driver-opc/pom.xml
+++ b/driver-parent/driver-opc/pom.xml
@@ -39,6 +39,32 @@
 	     <systemPath>${basedir}/lib/jeasyopc.jar</systemPath>
 	</dependency>
 	
+	<dependency>
+	    <groupId>org.openscada.jinterop</groupId>
+	    <artifactId>org.openscada.jinterop.core</artifactId>
+	    <version>2.1.8</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.openscada.jinterop</groupId>
+	    <artifactId>org.openscada.jinterop.deps</artifactId>
+	    <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.openscada.utgard</groupId>
+	    <artifactId>org.openscada.opc.dcom</artifactId>
+	    <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.openscada.utgard</groupId>
+	    <artifactId>org.openscada.opc.lib</artifactId>
+	    <version>1.5.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.bouncycastle</groupId>
+	    <artifactId>bcprov-jdk15on</artifactId>
+	    <version>1.59</version>
+	</dependency>
+
   </dependencies>
 
   <build>
