--- a/server/wrapper.conf
+++ b/server/wrapper.conf
@@ -86,10 +86,10 @@ wrapper.console.title=iottree_server
 wrapper.ntservice.name=iottree_server
 
 # Display name of the service
-wrapper.ntservice.displayname=iottree_server
+wrapper.ntservice.displayname=IOT Tree Server
 
 # Description of the service
-wrapper.ntservice.description=IOT Tree Server
+wrapper.ntservice.description=The Internet of things server also supports industrial automation
 
 # Service dependencies.  Add dependencies as needed starting from 1
 wrapper.ntservice.dependency.1=
