--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.iottree</groupId>
 		<artifactId>iottree-parent</artifactId>
-		<version>0.95.2</version>
+		<version>0.95.3</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -87,6 +87,7 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+		
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>servlet-api</artifactId>
@@ -102,6 +103,7 @@
 			<version>2.2</version>
 			<systemPath>${basedir}/../server/tomcat/lib/jsp-api.jar</systemPath>
 		</dependency>
+	<!-- 
 	<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>websocket-api</artifactId>
@@ -109,6 +111,7 @@
 			<version>2.2</version>
 			<systemPath>${basedir}/../server/tomcat/lib/websocket-api.jar</systemPath>
 		</dependency>
+		 -->
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 		    <groupId>org.json</groupId>
@@ -176,7 +179,18 @@
     <version>9.4.43.v20210629</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>1.2</version>
+</dependency>
 
+	<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.netty/netty-all 
 		<dependency>
