--- a/server/pom.xml
+++ b/server/pom.xml
@@ -192,7 +192,7 @@
 			                            <include>data/dev_drv/</include>
 			                            <include>data/comp_lib/</include>
 			                            <include>data/demo/</include>
-			                            <include>data/plugins/demo/</include>
+			                            <include>data/plugins/mail/</include>
 			                        </includes>
 			                    </resource>
 			                </resources>
