--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>iottree-parent</artifactId>
     <groupId>org.iottree</groupId>
-    <version>0.95.4</version>
+    <version>0.95.5</version>
   </parent>
 
   <artifactId>iottree-server</artifactId>
@@ -253,7 +253,7 @@
 			                    <zip destfile="../_output/iot-tree-${project.version}.zip" >
 					                  <fileset dir="../_output/">
 					                    <exclude name="jdk/"/>
-					                    <exclude name="iot-tree-0.95.4-winjdk.zip"/>
+					                    <exclude name="iot-tree-${project.version}-winjdk.zip"/>
 					                  </fileset>
                 				</zip>
 							</tasks>
