--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.iottree</groupId>
     <artifactId>iottree-parent</artifactId>
-    <version>0.95.7</version>
+    <version>0.95.8</version>
     <packaging>pom</packaging>
     <name>IoT-Tree Project Parent POM</name>
     <description>This is the top level project that builds, packages sub-projects and integration libs.</description>
@@ -11,6 +11,7 @@
     <modules>
         <module>core</module>
 		<module>driver-parent</module>
+		<module>ext-parent</module>
 		<module>web</module>
 		<module>server</module>
   </modules>
