--- a/driver-parent/driver-common/pom.xml
+++ b/driver-parent/driver-common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>driver-parent</artifactId>
 		<groupId>org.iottree.driver</groupId>
-		<version>0.96.4</version>
+		<version>0.96.5</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>iottree-driver-common</artifactId>
@@ -33,7 +33,12 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.1.53.Final</version>
 		</dependency>
-
+		
+<dependency>
+    <groupId>com.github.s7connector</groupId>
+    <artifactId>s7connector</artifactId>
+    <version>2.1</version>
+</dependency>
 
 	</dependencies>
 
