--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>iottree-parent</artifactId>
     <groupId>org.iottree</groupId>
-    <version>0.96.5</version>
+    <version>0.97.0</version>
   </parent>
 
   <artifactId>iottree-server</artifactId>
@@ -201,6 +201,7 @@
 			                        <directory>../</directory>
 			                        <includes>
 			                            <include>data/dev_drv/</include>
+			                            <include>data/dev_lib/lib_demo/</include>
 			                            <include>data/comp_lib/</include>
 			                            <include>data/demo/</include>
 			                            <include>data/simulator/demo/</include>
