--- a/core/pom.xml
+++ b/core/pom.xml
@@ -130,6 +130,12 @@
 		    <groupId>commons-fileupload</groupId>
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.4</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>commons-io</groupId>
+		    		<artifactId>commons-io</artifactId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 <!-- 
 		<dependency>
@@ -224,18 +230,23 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
-<dependency>
-    <groupId>com.jayway.jsonpath</groupId>
-    <artifactId>json-path</artifactId>
-    <version>2.7.0</version>
-</dependency>
-		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-<dependency>
-    <groupId>org.jsoup</groupId>
-    <artifactId>jsoup</artifactId>
-    <version>1.15.1</version>
-</dependency>
-		
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+				<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.15.1</version>
+		</dependency>
+		<dependency>
+		     <groupId>net.sourceforge.htmlunit</groupId>
+		     <artifactId>htmlunit</artifactId>
+		     <version>2.62.0</version>
+		     
+		</dependency>
 	</dependencies>
 	
 </project>
