--- a/win_panel/win_client/packages.config
+++ b/win_panel/win_client/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Web.WebView2" version="1.0.1305-prerelease" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1264.42" targetFramework="net45" />
 </packages>
