--- a/core/pom.xml
+++ b/core/pom.xml
@@ -247,6 +247,15 @@
 		     <version>2.62.0</version>
 		     
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
+		<dependency>
+		    <groupId>org.influxdb</groupId>
+		    <artifactId>influxdb-java</artifactId>
+		    <version>2.23</version>
+		</dependency>
+		
+		
 	</dependencies>
 	
 </project>
