--- a/server/wrapper.sor.conf
+++ b/server/wrapper.sor.conf
@@ -98,5 +98,5 @@ wrapper.ntservice.dependency.1=
 wrapper.ntservice.starttype=AUTO_START
 
 # Allow the service to interact with the desktop.
-wrapper.ntservice.interactive=false
+wrapper.ntservice.interactive=true
 
