--- a/web/main/pom.xml
+++ b/web/main/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.iottree.web</groupId>
     <artifactId>web-parent</artifactId>
-    <version>1.6.0</version>
+    <version>1.6.1</version>
   </parent>
   <artifactId>main</artifactId>
   <packaging>war</packaging>
@@ -56,6 +56,7 @@
                         <includes>
                             <include>*.jsp</include>
                             <include>inc/</include>
+                            <include>login/</include>
                             <include>WEB-INF/web.xml</include>
                             <include>WEB-INF/config.json</include>
                         </includes>
