msgnet JS Func node added

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -265,6 +265,12 @@
 		    <artifactId>sqlite-jdbc</artifactId>
 		    <version>3.45.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.spullara.mustache.java/compiler -->
+<dependency>
+    <groupId>com.github.spullara.mustache.java</groupId>
+    <artifactId>compiler</artifactId>
+    <version>0.9.13</version>
+</dependency>
 		
 		
 	</dependencies>
