--- a/ext-parent/ext-basic/pom.xml
+++ b/ext-parent/ext-basic/pom.xml
@@ -42,6 +42,14 @@
     <artifactId>kafka-clients</artifactId>
     <version>3.7.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.infiniteautomation/bacnet4j -->
+	<dependency>
+	    <groupId>com.infiniteautomation</groupId>
+	    <artifactId>bacnet4j</artifactId>
+	    <version>5.0.2</version>
+	</dependency>
+		
 		
   </dependencies>
 
@@ -91,4 +99,28 @@
     </pluginManagement>
   </build>
   
+  <repositories>
+    <repository>
+        <releases>
+            <enabled>false</enabled>
+        </releases>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+        <id>ias-snapshots</id>
+        <name>Infinite Automation Snapshot Repository</name>
+        <url>https://maven.mangoautomation.net/repository/ias-snapshot/</url>
+    </repository>
+    <repository>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <id>ias-releases</id>
+        <name>Infinite Automation Release Repository</name>
+        <url>https://maven.mangoautomation.net/repository/ias-release/</url>
+    </repository>
+</repositories>
 </project>
