import bug in linux fixed,and some doc updated

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -76,6 +76,13 @@
 
 		</dependency>
 		
+
+		<dependency>
+		    <groupId>org.graalvm.truffle</groupId>
+		    <artifactId>truffle-api</artifactId>
+		</dependency>
+		
+		
 		<dependency>
 	    <groupId>tanukisoft</groupId>
 	    <artifactId>wrapper</artifactId>
