msgnet node lib added,some bug fixed and linux test runner

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -279,6 +279,13 @@
     <version>0.9.13</version>
 </dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
+<dependency>
+    <groupId>com.fazecast</groupId>
+    <artifactId>jSerialComm</artifactId>
+    <version>2.11.0</version>
+</dependency>
+		
 		
 	</dependencies>
 	
