--- a/ext-parent/pom.xml
+++ b/ext-parent/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 		<groupId>org.iottree</groupId>
 		<artifactId>iottree-parent</artifactId>
-		<version>1.7.0</version>
+		<version>1.7.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
   <groupId>org.iottree.ext</groupId>
@@ -27,13 +27,14 @@
   <modules>
     <module>ext-opcda</module>
     <module>ext-basic</module>
+    <module>ext-pro</module>
   </modules>
   
   <dependencies>
     <dependency>
 	    <groupId>org.iottree</groupId>
 	    <artifactId>iottree-core</artifactId>
-	    <version>1.7.0</version>
+	    <version>1.7.1</version>
 	</dependency>
 
 	
