modbus driver find connection broken bug in linux fixed

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -272,6 +272,7 @@
 								<copy file="./iot-tree.sh.txt" tofile="../_output/iot-tree.sh" />
 								<copy file="./iot-tree-start.sh.txt" tofile="../_output/iot-tree-start.sh" />
 								<copy file="./license.txt" tofile="../_output/license.txt" />
+								<copy file="./iot-tree.service" tofile="../_output/iot-tree.service" />
 								<copy file="./iot-tree-service-start.sh.txt" tofile="../_output/iot-tree-service-start.sh" />
 								<copy file="./iot-tree-service-stop.sh.txt" tofile="../_output/iot-tree-service-stop.sh" />
 								<copy file="../core/target/iottree-core-${project.version}.jar" tofile="../_output/lib/iottree-core-${project.version}.jar" />
@@ -330,8 +331,8 @@
 					                    <exclude name="iot-tree-${project.version}-winjre8x86.zip"/>
 					                  </fileset>
                 				</zip>
-			                        -->
-                				
+			                        
+                				 -->
 							</tasks>
 						</configuration>
 					</execution>
