--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,5 +119,6 @@
   	<module>ROOT</module>
   	<module>doc</module>
   	<module>main</module>
+  	<module>platform</module>
   </modules>
 </project>
